# shit

./: .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  Awherewegoagain.cpp  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  F****ME.md  HOLYS.java  IMPROVEMENTS.md  LICENSE.md  Makefile  OhSH  PEANUT.md  PUBLIC_REPOS.md  README-AR.md  README-ES.md  README-NL.md  README-RO.md  README-UA.md  README-ph.md  README-pt-br.md  README-tlh.md  README.ML.md  README.bg.md  README.by.md  README.et.md  README.fa.md  README.fr.md  README.kz.md  README.md  README.my.md  README.no.md  README.pl.md  README.ru.md  README.tn.md  (+65 more)
.cursor/rules/: shit.mdc
.github/: CODEOWNERS
.github/workflows/: automerge.yml  md-lint.yml  netlify-deploy.yml  random-review.yml
.windsurf/workflows/: make-shit.md
Windows/: CMakeLists.txt  main.cpp  version.rc
drivers/: pic.c
hit-the-shit/: README.md  index.html  reviews.html  reviews.js  reviews.json  script.js  server.js  style.css  visitors.json
include/shit/: console.h  interrupt.h  printk.h
lib/: format.c  string.c
linux_kernel_module/: Makefile  shit_module.c
patch_cve-2025-shit-1b/: CVE-2025-SHIT-1B.md  shit_patch.rs
shit/: exception_dispatch.c  irq_handlers.c  main.c  printk.c
shit/app/: views.py
shit/memory/: kheap.c  pmm.c
shit/shit/: asgi.py  settings.py  urls.py  wsgi.py
shit/tty/: console.c  psf_font.c
shitcoins/: OneBillionShit.md
src/: App.test.tsx  App.tsx  index.css  main.rs  main.tsx
src/components/: AchievementSystem.tsx  index.ts  (+28 more)
tools/: fetch_limine.sh
(+6 files in other folders)
